WFCORE-1374 - use posix syntax for --add-exports that works with launcher